--- a/styles.css
+++ b/styles.css
@@ -143,4 +143,53 @@ a{
     padding-top: 4vh;
     font-size: 18px;
 }
+/* media query */
+@media (min-width: 667px) {
+    .grid-container {
+      grid-template-rows: auto;
+      grid-template-columns: 50% 50%;
+    }
+  
+    .first-item {
+      grid-column: 1/2;
+      grid-row: 1/2;
+    }
+  
+    .second-item {
+      grid-column: 1/2;
+      grid-row: 2/3;
+    }
+  
+    .third-item {
+      grid-column: 2/3;
+      grid-row: 1/3;
+    }
+  
+    .third-item img {
+      width: 100%;
+      height: 30vh;
+      object-fit: fill;
+    }
+  
+    .flex-container div {
+      width: 24%;
+      flex-basis: 24%;
+    }
+  }
+  
+  @media (max-width: 666px) {
+    .grid-container {
+      text-align: center;
+    }
+  
+    .flex-container {
+      flex-direction: column;
+    }
+    .flex-container div {
+      flex-basis: 90%;
+    }
+    figcaption {
+      padding: 1rem 0;
+    }
+  }
 
